# PetalMPRTester

./: .gitignore  App.xaml  App.xaml.cs  KeyTestPage.xaml  KeyTestPage.xaml.cs  LICENSE.txt  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  Package.appxmanifest  PetalMPRTester.csproj  PetalMPRTester.sln  README.md  RealTimeSamplingPage.xaml  RealTimeSamplingPage.xaml.cs  app.manifest
Properties/: launchSettings.json
Properties/PublishProfiles/: win-arm64.pubxml  win-x64.pubxml
dll/: CMakeLists.txt  MousePollingEngine.cpp  MousePollingEngine.h
